--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,6 @@
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
 				app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-				<TextView
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_gravity="center"
-					android:text="You made it here!" />
 			</FrameLayout>
 
 		</android.support.design.widget.CoordinatorLayout>
@@ -56,6 +50,25 @@
 			android:orientation="vertical"
 			android:padding="8dp"
 			android:background="?android:windowBackground">
+
+			<android.support.v7.widget.RecyclerView
+				android:layout_width="match_parent"
+				android:layout_height="0dp"
+				android:layout_weight="1"
+				app:items="@{viewModel.channels}"
+				app:itemBinding="@{view.channelItemBinding}"
+				app:layoutManager="LinearLayoutManager" />
+
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:text="@={viewModel.newChannelName}" />
+
+			<Button
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:onClick="@{() -> viewModel.addChannel()}"
+				android:text="Add" />
 		</LinearLayout>
 
 
